--- a/app/views/layouts/tasks.html.erb
+++ b/app/views/layouts/tasks.html.erb
@@ -18,14 +18,14 @@
 
             <div class="col-md-5 col-md-offset-1 col-sm-4 col-xs-7 navbar-left">
               <div class=" btn-toolbar btn-group" style="margin-top:13px">
-                <a class="btn active btn-default" href="#">Лента</a>
+                <a class="btn btn-default nav-btn" href="#">Лента</a>
                 <a class="btn btn-default" href="#">Друзья</a>
                 <a class="btn btn-default" href="/profiles/show">Профиль</a> <!-- %= link_to "Профиль", profiles_path, :class => "btn" % -->
               </div>
             </div>
 
             <div class="col-md-3 col-sm-2 col-xs-2 " style="margin-top:7px">
-              <%= link_to "+", new_task_path, :class => "btn nav-btn" %>
+              <%= link_to "+", new_task_path, :class => "btn mrg" %>
           </div>
 		</nav>
 	</div>
