--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,7 @@
 	              <div class=" btn-toolbar btn-group" style="margin-top:13px">
 	                <%= link_to "Лента", tasks_path, :class => "btn btn-default" %>	
 	                <a class="btn btn-default" href="#">Друзья</a>
-	                <a class="btn active btn-default" href="#">Профиль</a>
+	                <a class="btn btn-default nav-btn" href="#">Профиль</a>
 	              </div>
 	            </div>
 			</nav>
@@ -18,17 +18,8 @@
 			<div class="row-fluid">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 otst20">
 				</div>
-				<div class="otst50">
-					<div class="row-fluid">
-						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-lg-offset-2 col-sm-10 col-xs-10 profil-title-name">
-						<p class="profil-name">Рудольф Липшиц</p>
-						</div>
-						<div class="col-lg-10 col-lg-offset-1 col-md-10 col-lg-offset-2 col-sm-10 col-xs-10 otst20">
-						</div>
-					</div>
-				</div>
 				<div class=" col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-2 col-xs-offset-5">
-					<img src="images/lipsh.jpg" width="200" height="200">
+					<img src="images/lipsh.jpg" width="200" height="200" class="img-rounded">
 				</div>
 				<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
 				<div class="row-fluid">
