--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -13,7 +13,7 @@
             </div>
 
             <div class="col-md-3 col-sm-2 col-xs-2 " style="margin-top:7px">
-              <%= link_to "+", new_task_path, :class => "btn nav-btn" %>
+              <%= link_to "+", new_task_path, :class => "btn mrg" %>
           </div>
     </nav>
   </div>
