--- a/app/views/layouts/dialog.html.erb
+++ b/app/views/layouts/dialog.html.erb
@@ -14,7 +14,7 @@
             <nav class="navbar dialog-bar"> 
                   <div class="fleft">
                   
-                    <%= link_to "Назад", tasks_path, :class => "btn nav-btn"%>
+                    <%= link_to "Назад", tasks_path, :class => "btn mrg", :style => "margin-left: 7px;" %>
                     </div>
 
                      <div class="header  col-md-5 col-md-offset-2">
