Added logout-button to profile page, added show-quest page

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -100,6 +100,19 @@ textarea { resize: none }
   border-color: $white;
 }
 
+.text-block{
+  text-indent:4px;
+
+  padding: 4px;
+
+  background: $white; 
+  color: #A0A0A0;
+  border: 1px;
+  border-radius: 3px;
+  border-style: solid;
+  border-color: #E8E8E8;
+}
+
 .nav-btn:hover{
   background: $white;
   color: $main-bg;
