--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -29,6 +29,7 @@ textarea { resize: none }
       position: relative;
       display: table;
       float: none;
+      border-radius: 3px;
       margin: 0 auto;
 
     }
@@ -43,6 +44,8 @@ textarea { resize: none }
   background: $main-bg;
   text-align: center;
   margin-bottom: 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 
@@ -229,3 +232,4 @@ textarea { resize: none }
 .avatar {
   margin-top: 25%;
 }
+
