Fixed top-bar, added solutions to all display resolutions, Changed button design

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -17,7 +17,9 @@
 .navbar > .container-fluid .navbar-brand {
 }
 
-.navbar { min-width: 400px; background: #DC4C26;}
+.navbar { min-width: 400px; background: #DC4C26;
+
+}
 
 textarea { resize: none }
 
