--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -86,7 +86,7 @@ h1,h2,h3,h4,h5,h6{
 	color: #4E4E4E;
 	
 }
-	/* Блок коричневого цвета с текстом */
+	/* Блок серого цвета с текстом */
 .index-text-block{
 	background: #E8E8E8;
 }
