--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -59,7 +59,6 @@ textarea { resize: none }
   margin-top: 5px;
 }
 
-
 .btn{ 
  
   background: $light no-repeat;  
@@ -77,6 +76,8 @@ textarea { resize: none }
   font-size: 16px;
   border-color: $light;
  /* border-radius: 0;*/
+  height: 35px;
+  text-decoration: none;
 }
 
 .btn:hover{
@@ -88,20 +89,60 @@ textarea { resize: none }
   border-radius: 3px;
   border-style: solid;
   border-color: $light;
+  text-decoration: none;
+}
+
+.light-btn{ 
+ 
+  background: $white no-repeat;  
+ 
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: $light;
+  border: 1px;
+  border-radius: 3px;
+  border-style: solid;
+  transition: 0.2s;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:300;
+  font-size: 16px;
+  border-color: $light;
+  text-decoration: none;
+}
+
+.light-btn:hover{
+  background: $light;
+  background-size: 20%;
+  color: $white;  
+  border-color: $main-bg;
+  border: 1px;
+  border-radius: 3px;
+  border-style: solid;
+  border-color: $light;
+  text-decoration: none;
 }
 
 .mrg{
   margin-top:7px;
 }
 
-.nav-btn
+.btn-active
 {
-  background: $white; 
-  color: $main-bg;
+  background: $main-bg; 
+  color: $light;
   border: 1px;
   border-radius: 3px;
   border-style: solid;
-  border-color: $white;
+  border-color: $light;
+  text-decoration: none;
+}
+
+.btn-active:hover{
+  background: $main-bg;
+  color: $light;
+  text-decoration: none;
+  border-color: $light;
 }
 
 .text-block{
@@ -115,11 +156,7 @@ textarea { resize: none }
   border-radius: 3px;
   border-style: solid;
   border-color: #E8E8E8;
-}
-
-.nav-btn:hover{
-  background: $white;
-  color: $main-bg;
+  text-decoration: none;
 }
 
 .input-group-btn { 
@@ -223,10 +260,12 @@ textarea { resize: none }
   border: 1px;
   border-style: solid;
   border-color: #EBEBEB;
+  text-decoration: none;
 }
 
 .band-block:hover {
   background: #EBEBEB;
+  text-decoration: none;
 }
 
 
