--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -10,8 +10,8 @@
 					<span>Награда</span>
 					<p class="text-block"><%= @task.cookie %></p>
 					<center>
-						<button type="button" class="btn">Принять</button>
-						<button type="button" class="btn">Отклонить</button>
+						<button type="button" class="btn light-btn">Принять</button>
+						<button type="button" class="btn light-btn">Отклонить</button>
 					</center>
 				</div>
 			</div>
