--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,7 @@
 		<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
 		<div class="row-fluid">
 			<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-2 col-sm-12 col-sm-offset-3 col-xs-12 col-xs-offset-5 ">
-				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn" %> </h4> 
+				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4> 
 				<p class="profil-status">Статус: (в отпуске/готов помочь/срочно нужна помощь)</p>
 				<div class="row-fluid">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profil-razdelitel">
@@ -18,16 +18,6 @@
 					Город: Ростов-на-Дону<br>
 				Телефон: (скрыт)<br>
 				</p>
-				<a class="profil-inf" href="/" onClick="op('div1'); return false;"> Показать дополнительно информацию...</a>
-				<div id="div1" style="display:none">
-					<p class= "slitno">
-						email: rudolf_lipshc@gmail.com <br>
-						Работа: математик <br>
-						Хобби: преподавание <br>
-						skype: (отстутствует) <br>
-						Аккаунты в других соц.сетях:(отсутствуют) <br>
-					</p>
-				</div>
 			</div>
 		</div>
 		</div>
