--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,7 +1,7 @@
     <div class="container-fluid">
       <nav class="row-fluid navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="row">
-            <div class="header col-md-2 col-sm-4 col-xs-12" style="margin-left:10px; margin-top:6px;">
+            <div class="header bar-logo-text col-md-2 col-sm-4 col-xs-12" style="margin-left:10px; margin-top:6px;">
             To Do For Me
             </div>
 
