--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,7 @@
 		<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
 		<div class="row-fluid">
 			<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-2 col-sm-12 col-sm-offset-3 col-xs-12 col-xs-offset-5 ">
-				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4> 
+				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn front-btn" %> </h4> 
 				<p class="profil-status">Статус: (в отпуске/готов помочь/срочно нужна помощь)</p>
 				<div class="row-fluid">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profil-razdelitel">
