--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,13 @@
 	<div class="container-fluid">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       		<div class="container-fluid">
-      			<div class="col-md-2 col-xs-4	">
-      				<img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
+      			<div class="header bar-logo-text col-md-2 col-xs-4" style="margin-top:10px">
+      				TODOforME
       			</div>
 
       			<div class="col-md-8 clearfix visible-md visible-lg"  >
       				<div class="navbar-center">
-      					<h2 class="index-navbar-header">Первый в мире таск-менеджер для друзей!</h2>
+      					<h2 class="index-navbar-header">Список дел для Вас и Ваших друзей!</h2>
       				</div>
       			</div>
 
