--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Добро пожаловать на PLZ'ки!</title>
+    <title>Добро пожаловать на TODOforME!</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
  
