--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Добро пожаловать на ДайПять!</title>
-
+    <title>Добро пожаловать на TODOforME!</title>
     
     
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
