--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -10,8 +10,8 @@
  
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
   </head>
-  <body>
+<body style="background:#fff">
 	<%= yield %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  </body>
+</body>
 </html>
