--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container profile-block">
 	<div class="row-fluid" style="margin-top:20px">
 		<div class=" col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-2 col-xs-offset-5">
-			<img src="<%= @current_user.picture_url %>" width="100" height="100" class="img-rounded">
+			<img src="<%= @current_user.picture_large_url %>" class="img-rounded">
 		</div>
 		<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
 		<div class="row-fluid">
