--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,1 +1,15 @@
-<%= render @friends %>
+<center>
+    <div class="notice"><%= @notice %></div>
+</center>
+<%  @friends.each do |friend| %>
+
+<%  user=User.find(friend.user_id2) %>
+
+        <div class="row">
+          <div class="col-md-6 col-md-offset-3 col-xs-12 band-block">
+            <div class="avatar_frlist"><img class="img-rounded" src="<%=user.picture_url %>" height="80px" width="80px"> </div>
+            <div class="nickname_frlist"> <%=  user.name %></div>  
+            <div class="badge"> +<%= friend.value %></div>
+          </div>
+        </div>
+<% end %>
