--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -24,19 +24,19 @@
         <%= f.text_field :cookie ,:class => "form-control text-input", :placeholder=>"Награда" %>
         <br>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
           <div class="input-group date form_datetime">
             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
             <%= f.text_field :deadline ,:class => "form-control text-input", :readonly => true, :placeholder=>"Дата"%>
             <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
           </div>
         </div>
-
+ -->
 
         <br>
         <%= f.submit "Отправить", :class => "btn light-btn" %>
     <% end %>
-
+<!-- 
   <script type="text/javascript">
       function GetRoundedDate()
       {
@@ -56,7 +56,7 @@
         minView: 1
         });
     </script> 
-
+ -->
     </div>
 </div>
 
