--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,8 +1,9 @@
     <div class="container-fluid">
       <nav class="row-fluid navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="row">
-            <div class="header bar-logo-text col-md-2 col-sm-4 col-xs-12" style="margin-left:10px; margin-top:6px;">
-            TODOforME
+            <div class="col-md-2 col-sm-4 col-xs-12">
+            <!--<img src="/images/logo.svg" width="50" width="50"> -->
+            <div class="header bar-logo-text" style="margin-left:10px; margin-top:6px;" >TODOforME</div>
             </div>
 
             <div class="col-md-5 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-8">
