--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,10 +1,11 @@
 <div class="container profile-block">
 	<div class="row-fluid" style="margin-top:20px">
+		<div class="row-fluid">
 		<div class=" col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 col-xs-2 col-xs-offset-5">
-			<img src="<%= @current_user.picture_large_url %>" class="img-rounded">
+			<img src="<%= @current_user.picture_large_url %>" style="margin-top: 13px" class="big-avatar">
 		</div>
 		<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8">
-		<div class="row-fluid">
+		
 			<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-2 col-sm-12 col-sm-offset-3 col-xs-12 col-xs-offset-5 ">
 				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4> 
 				<p class="profil-status">Статус: (в отпуске/готов помочь/срочно нужна помощь)</p>
@@ -16,6 +17,7 @@
 					Город: Ростов-на-Дону<br>
 				Телефон: (скрыт)<br>
 				</p>
+				<div class="margin"> </div>
 			</div>
 		</div>
 		</div>
