--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,7 +12,9 @@
 					<span>Награда</span>
 					<p class="text-block"><%= @task.cookie %></p>
 					<center>
-						<%= control_buttons(@current_user,@task) %>
+						<div class="col-md-12" >
+							<%= control_buttons(@current_user,@task) %>
+						</div>
 					</center>
 				</div>
 			</div>
