--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,14 +8,14 @@
 		
 			<div class="col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-2 col-sm-12 col-sm-offset-3 col-xs-12 col-xs-offset-5 ">
 				<h4 class="profil-name"> <%= @current_user.name %> <%= link_to 'Выйти', logout_path, :class => "btn light-btn" %> </h4> 
-				<p class="profil-status">Статус: (в отпуске/готов помочь/срочно нужна помощь)</p>
+				<p class="btext">Статус: (TODO)</p>
 				<div class="row-fluid">
 					<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profil-razdelitel">
 					</div>
 				</div>
-				<p class= "slitno">
-					Город: Ростов-на-Дону<br>
-				Телефон: (скрыт)<br>
+				<p class= "btext">
+					Город: <span class="gtext">Ростов-на-Дону</span><br>
+				Телефон: <span class="gtext">(скрыт)</span><br>
 				</p>
 				<div class="margin"> </div>
 			</div>
