--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -188,11 +188,11 @@ textarea { resize: none }
   padding: 4px;
 
   background: $white; 
-  color: #A0A0A0;
+  color: #000000;
   border: 1px;
   border-radius: 3px;
   border-style: solid;
-  border-color: #E8E8E8;
+  border-color: $main-bg;
   text-decoration: none;
 }
 
@@ -283,14 +283,17 @@ textarea { resize: none }
 
 .task {
   font-size: 13px;
-  color: #7D7D7D;
+  color: #000000;
   vertical-align: top;
 }
 
 .award {
-  font-size: 12px;
-  color: #DC4C26;
+  font-family: 'Open Sans', sans-serif;
+  font-weight:300;
+  line-height: 1.9em;
+  color: $main-bg;
   text-align: right;
+  font-size:12px;
 }
 
 .band-block {
@@ -326,6 +329,8 @@ textarea { resize: none }
 
 .avatar {
   margin-top: 25%;
+  border-radius: 3px;
+  border: 1px solid $main-bg;
 }
 
 .bar-logo-text{
