--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -1,12 +1,12 @@
     <div class="container-fluid">
       <nav class="row-fluid navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="row">
-            <div class="col-md-2 col-sm-4 col-xs-12">
-            <!--<img src="/images/logo.svg" width="50" width="50"> -->
-            <div class="header bar-logo-text" style="margin-left:10px; margin-top:6px;" >TODOforME</div>
+            <div class="col-md-1 col-sm-1  col-xs-1">
+            <img src="/images/logo.svg" width="50" width="50">
+            <!--div class="header bar-logo-text" style="margin-left:10px; margin-top:6px;" >TODOforME</div-->
             </div>
 
-            <div class="col-md-5 col-md-offset-3 col-sm-5 col-xs-offset-1 col-xs-8">
+            <div class="col-md-5 col-md-offset-4 col-sm-5 col-sm-offset-3 col-xs-offset-1 col-xs-8">
               <div class=" btn-toolbar btn-group" style="margin-top:1px; padding: 5px;">
                 <%= bar_link_to 'Лента', tasks_path %>
                 <%= bar_link_to 'Друзья', friends_path %>
@@ -14,7 +14,7 @@
               </div>
             </div>
 
-            <div class="col-md-1 col-sm-1 col-xs-3 navbar-right" style="margin-top:7px">
+            <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-2 col-xs-1" style="margin-top:7px">
               <%= link_to "+", new_task_path, :class => "btn" %>
           </div>
           </div>
