--- a/app/views/layouts/_top_bar.html.erb
+++ b/app/views/layouts/_top_bar.html.erb
@@ -15,7 +15,7 @@
             </div>
 
             <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-2 col-xs-1" style="margin-top:7px">
-              <%= link_to "+", new_task_path, :class => "btn" %>
+              <%= link_to "+", new_task_path, :class => "btn", :remote => true %>
           </div>
           </div>
     </nav>
