--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TODOforME - Список друзей</title>
+    <title>TODOforME - Лента</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 
@@ -13,5 +13,16 @@
     <%= render :partial => 'layouts/top_bar' %>
     <%= yield %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
+    <div id="mainDialog" class="dialog-box modal" style="background: rgba(0, 0, 0, 0.6);">
+      <div class="dialog-content">
+      </div>
+    </div>
+
+
+<script type="text/javascript">
+  $("abbr.timeago").timeago();
+</script>
+
   </body>
 </html>
