--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+<div class="row">
   <div class="col-md-12">
     <div class="col-md-2">
       <img class="avatar" src="<%= @task.user.picture_url %>">
@@ -20,4 +21,8 @@
       </center>
     </div>
   </div>
+</div>
+<div class="row" style="margin-top:10px">
+  <%= render partial: "tasks/share", locals: { task: @task } %>
+</div>
 </div>
