some little improves

--- a/app/views/tasks/_share.html.erb
+++ b/app/views/tasks/_share.html.erb
@@ -1,4 +1,8 @@
-<div class='share-buttons' data-description='<%= task.description %>' data-image='' data-url='<%= task_path(task.token) %>'>
+
+<!-- 
+<input class="form-control text-input" onfocus="this.select()" value="<%= task_url(@task.token) %>" readonly>
+ -->
+ <div class='share-buttons' data-description='<%= task.description %>' data-image='' data-url='<%= task_path(task.token) %>'>
     <strong style="bottom: 10px; position: relative;">Поделиться: </strong>
     <a class="zocial vk icon" data-provider="vk"></a>
     <a class="zocial twitter icon" data-provider="twitter"></a>
