fixed bug with duplicating

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TODOforME - Лента</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
   <%= csrf_meta_tags %>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
@@ -12,7 +12,7 @@
   <body>
     <%= render :partial => 'layouts/top_bar' %>
     <%= yield %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application" %>
 
     <div id="mainDialog" class="dialog-box modal" style="background: rgba(0, 0, 0, 0.6);">
       <div class="dialog-content">
